chore: module info
Signed-off-by: Sam Gammon <s@mg.sv>

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "tauri-plugin-push-notifications",
   "version": "0.1.0",
-  "author": "You",
-  "description": "",
+  "author": "Sam Gammon <sam@elide.dev>",
+  "description": "Tauri plugin for push notifications (APNS, FCM, etc)",
   "type": "module",
   "types": "./dist-js/index.d.ts",
   "main": "./dist-js/index.cjs",
