--- a/permissions/default.toml
+++ b/permissions/default.toml
@@ -1,3 +1,3 @@
 [default]
 description = "Default permissions for the plugin"
-permissions = ["allow-push-token"]
+permissions = ["allow-push-token", "allow-request-push-permission"]
