feat: continued mobile plugin impl
Signed-off-by: Sam Gammon <s@mg.sv>

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,2 +1,18 @@
+pluginManagement {
+    repositories {
+        google()
+        gradlePluginPortal()
+        mavenCentral()
+    }
+}
+
+dependencyResolutionManagement {
+    repositories {
+        google()
+        gradlePluginPortal()
+        mavenCentral()
+    }
+}
+
 include ':tauri-android'
 project(':tauri-android').projectDir = new File('./.tauri/tauri-api')
