--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ serde = "1.0"
 thiserror = "2"
 serde_json = "^1"
 base64 = "^0"
-
+log = "0.4.27"
 [build-dependencies]
 tauri-plugin = { version = "^2", features = ["build"] }
 
