--- a/permissions/default.toml
+++ b/permissions/default.toml
@@ -1,3 +1,3 @@
 [default]
 description = "Default permissions for the plugin"
-permissions = ["allow-get-fcm-token", "allow-request-push-permission","allow-get-apns-token","allow-registerListener","allow-unregister-listener"]
+permissions = ["allow-get-fcm-token", "allow-request-push-permission","allow-get-apns-token","allow-registerListener","allow-unregister-listener","allow-checkPermissions","allow-requestPermissions"]
