--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
 links = "tauri-plugin-push-notifications"
 
 [dependencies]
-tauri = { version = "^2", features = ["push-notifications"] }
+tauri = { version = "^2" }
 serde = "1.0"
 thiserror = "2"
 serde_json = "^1"
