made firebase to be active only with feature on ios

--- a/examples/tauri-app/src-tauri/Cargo.toml
+++ b/examples/tauri-app/src-tauri/Cargo.toml
@@ -19,5 +19,5 @@ tauri-build = { version = "2.0.2", default-features = false }
 
 [dependencies]
 tauri = { version = "2.1.0" }
-tauri-plugin-push-notifications = { path = "../../../" }
+tauri-plugin-fcm = { path = "../../../" }
 
