--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ log = "0.4.27"
 [build-dependencies]
 tauri-plugin = { version = "^2" }
 
+[features]
+ios-fcm = []   # notre feature
+
 
 [patch.crates-io]
 tauri =  { git = "https://github.com/saurL/tauri", branch = "feat/push-notifications" }
